# testrepo-qt

./: .clang-format  .clang-tidy  meson.build
include/: CustomWidgets.hpp  mainwindow.hpp
resources/: image.qrc
src/: CustomWidgets.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
subprojects/libqtandroidtoolspicker/: meson.build  meson_options.txt
subprojects/libqtandroidtoolspicker/i18n/: generate_qrc.py  meson.build
subprojects/libqtandroidtoolspicker/include/atp/: atp.hpp  dll.hpp  spimpl.hpp
subprojects/libqtandroidtoolspicker/src/gui/: initialize_translator.cpp  main_wizard_widget.cpp  main_wizard_widget.ui
